# fbx2video

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/: main.py
